<resources>
    <string name="app_name">MyNotes</string>
    <string name="app_description">A small Description</string>
    <string name="username">Username</string>
    <string name="emailId">Email</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="guest">Guest User</string>
    <string name="searchHint">Search your notes</string>
    <string name="noteTitle">Title</string>
    <string name="noteContent">Note</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <string name="alertTitle">"Are you sure?"</string>
    <string name="alertMsg">"Logging out will delete all your existing notes."</string>
    <string name="newAccountSuccess">Account created successfully ! Login to continue..</string>
    <string name="alertMsgOnSync">This will delete all your existing data. Sync notes by creating new Account.</string>
    <string name="syncNote">"Sync Note"</string>
    <string name="syncNow">Sync Now</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip now ></string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="signUpHere">Don\'t have account? SignUp here.</string>
    <string name="loginHere">Already have an account? Login here.</string>
    <string name="passError">Password did not match !</string>
    <string name="passLengthError">Password should be atleast 6 characters !</string>
    <string name="emailLinkSent">Verification Email has been sent.</string>
    <string name="credentialError">Invalid login credentials.</string>
    <string name="emailExistError">Email doesn\'t exist.</string>
    <string name="emailInvalidError">Email address is invalid.</string>
    <string name="emailDuplicateError">Account already exists with the given email address.</string>
    <string name="syncError">Sync failed! Try again..</string>
    <string name="syncSuccess">Synced successfully !</string>
    <string name="ok">It\'s Okay</string>
    <string name="rateMsg">How was your experience with us ?</string>
    <string name="submit">Submit</string>
    <string name="noNotesMsg">No notes to display.</string>
    <string name="link">Add URL</string>
    <string name="enterHere">Enter here..</string>
    <string name="add">Add</string>
    <string name="url">URL</string>
    <string name="linkError">Enter valid URL.</string>
    <string name="thankMsg">Thank you for rating us </string>
    <string name="title_activity_add_note">AddNote</string>
</resources>