<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dimen_10sdp"
    android:layout_gravity="center"
    android:background="@color/colorCard"
    android:padding="10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35sdp"
        android:text="@string/link"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_link"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dimen_10sdp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLinkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextColor="@color/colorPeach"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/textLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterHere"
            android:textSize="16sp"
            android:textColor="@color/secondaryText"
            android:background="@android:color/transparent"
            android:layout_margin="8dp"
            android:paddingStart="25dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:gravity="end">
        <Button
            android:id="@+id/cancelLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFC107"
            android:textStyle="bold"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/addLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="#FFC107"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>